fix spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -163,20 +163,32 @@ select {
 }
 
 .first-row {
+    padding-top: 15px;
     display: flex;
     flex-direction: row;
-    width: 100%;
+    max-width: 100%;
+    justify-content: center;
+    justify-content: space-between;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
 .second-row {
-    width: 100%;
+    padding-top: 15px;
+    display: flex;
+    flex-direction: row;
+    max-width: 100%;
+    justify-content: center;
+    justify-content: space-between;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
 .response {
     display: flex;
     background-color:rgb(199, 234, 255);
     border-radius: 50px;
-    width: 100px;
+    width: 200px;
     height: 300px;
     padding: 35px;
     margin: 10px;
